--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
         <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">-->
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
+        <meta http-equiv="Content-Security-Policy" content=" style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'"/>
         <!--Import font-awesome Icon Font-->
         <link href="libs/font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <!--Import materialize.css-->
@@ -161,50 +161,50 @@
     <script type="text/html" id="profileTemplate">
         <div class="height100vh" style="background-color: #2b2b2a">
         <br>
-        <form enctype="multipart/form-data" acttion="" onsubmit="event.preventDefault();app.startLoader();app.editProfileForm(this);" method="post">
+        <form enctype="multipart/form-data" acttion="" id="editProfileForm" onsubmit="event.preventDefault();app.startLoader();app.editProfileForm(this);" method="post">
             <div class="center edit_profile_txt" >
-                <div onclick="$(this).toggle().next().show();$('.editBtnfile').show();$('textarea').removeAttr('readonly')">
-                    <button type="button" class="waves-effect waves-light btn btn-primary">Edit Profile</button>
+                <div >
+                    Edit Profile
                 </div>
-                <div style="display:none;">
+                <!--<div style="display:none;">
                     <button class="btn btn-primaty waves-effect waves-light" type="submit">Save</button>
                     <button class="btn btn-primaty waves-effect waves-light" type="button" onclick="app.profileLink();">Cancel</button>
-                </div>
+                </div>-->
             </div>
         <div class="row edit_profile "  >
 
                 <div class="row padding_margin_null" >
                 <div class="col s8 m8 padding_margin_null posRelative">
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('u_logo');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display: none;" onclick="app.setCropImage('u_logo');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="u_logo">
-                    <img src="_u_logo_" class="responsive-img" >
+                    <img src="_u_logo_" class="responsive-img"  onclick="app.setCropImage('u_logo');">
                 </div>
                 <div class="col s4 m4 padding_margin_null posRelative" >
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('ui_image0');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display: none;" onclick="app.setCropImage('ui_image0');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="ui_image0" >
-                    <img src="_ui_image0_" class="responsive-img">
+                    <img src="_ui_image0_" class="responsive-img" onclick="app.setCropImage('ui_image0');">
                 </div>
               <div class="col s4 m4 padding_margin_null posRelative" >
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('ui_image1');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile"  style="display: none;" onclick="app.setCropImage('ui_image1');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="ui_image1" >
-                    <img src="_ui_image1_" class="responsive-img">
+                    <img src="_ui_image1_" class="responsive-img" onclick="app.setCropImage('ui_image1');">
                 </div>
                 </div>
                 <div class="row padding_margin_null" >
                 <div class="col s4 m4 padding_margin_null posRelative">
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('ui_image2');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile"  style="display: none;" onclick="app.setCropImage('ui_image2');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="ui_image2">
-                    <img src="_ui_image2_" class="responsive-img">
+                    <img src="_ui_image2_" class="responsive-img " onclick="app.setCropImage('ui_image2');">
                 </div>
                 <div class="col s4 m4 padding_margin_null posRelative">
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('ui_image3');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display: none;" onclick="app.setCropImage('ui_image3');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="ui_image3">
-                    <img src="_ui_image3_" class="responsive-img">
+                    <img src="_ui_image3_" class="responsive-img" onclick="app.setCropImage('ui_image3');">
                 </div>
                 <div class="col s4 m4 padding_margin_null posRelative">
-                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display:none;" onclick="app.setCropImage('ui_image4');"><i class="fa fa-pencil"></i></button>
+                    <button type="button" class="btn btn-floating btnFlotEdit editBtnfile" style="display: none;"  onclick="app.setCropImage('ui_image4');"><i class="fa fa-pencil"></i></button>
                     <input type="hidden" name="ui_image4" >
-                    <img src="_ui_image4_" class="responsive-img">
+                    <img src="_ui_image4_" class="responsive-img" onclick="app.setCropImage('ui_image4');">
                 </div>
                 </div>
         </div>
@@ -213,7 +213,7 @@
                 <div class="col s6 m6" style="text-align: end"><span ><span id="aboutCounter">_u_aboutcount_</span>/500</span></div>
             </div>
         <div class="col s12 m12 edit_profile_bottom" >
-            <textarea name="u_about" onkeyup="$('#aboutCounter').text(this.value.length);" readonly  placeholder="Enter text here..." style="max-width:100%;height:150px;border: none;">_u_about_</textarea>
+            <textarea name="u_about" onblur="$('#editProfileForm').submit();" onkeyup="$('#aboutCounter').text(this.value.length);" placeholder="Enter text here..." style="max-width:100%;height:150px;border: none;">_u_about_</textarea>
         </div>
         
         </form>
@@ -270,7 +270,7 @@
                 <div class="bottom_btn">
                     <a href="#" class="dislike"><img class="inlineblock home_close_like_icon " src="img/closeoff.png" onclick="$(this).attr('src','img/close.png');" /></a>
                     <img class="inlineblock home_search_icon" src="img/searchoff.png"  onclick="$(this).attr('src','img/search.png');app.userLink();"/>
-                    <a href="#" class="like"><img class="inlineblock home_close_like_icon " src="img/like.png"/></a>
+                    <a href="#" class="like"><img class="inlineblock home_close_like_icon " onclick="$(this).attr('src','img/likeon.png');" src="img/like.png"/></a>
                 </div>
             </div>
         </div>
@@ -606,50 +606,23 @@
     <!--Coupon end-->
 
     <!--Coupon start-->
+    <script type="text/html" id="chatListUserTemplate">
+        <li class="collection-item row" onclick="app.messageLink();">
+            <div class="col s3 padding0">
+                <img src="_u_logo_" class=" responsive-img couponImg">
+            </div>
+            <div class="col s9">
+                <h5>_u_name_</h5>
+                <p class="margin5">_u_contact_</p>
+                <p class="margin5">_u_email_</p>
+            </div>
+        </li>
+    </script>
+
     <script type="text/html" id="chatListTemplate">
         <div class="couponss">
 
-            <ul class="collection">
-                <li class="collection-item row" onclick="app.messageLink();">
-                    <div class="col s3 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img couponImg">
-                    </div>
-                    <div class="col s9">
-                        <h5>Troika</h5>
-                        <p class="margin5">+98298989899</p>
-                        <p class="margin5">hhh@gmail.com</p>
-                    </div>
-                </li>
-                <li class="collection-item row" onclick="app.messageLink();">
-                    <div class="col s3 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img couponImg">
-                    </div>
-                    <div class="col s9">
-                        <h5>Troika</h5>
-                        <p class="margin5">+98298989899</p>
-                        <p class="margin5">hhh@gmail.com</p>
-                    </div>
-                </li>
-                <li class="collection-item row" onclick="app.messageLink();">
-                    <div class="col s3 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img couponImg">
-                    </div>
-                    <div class="col s9">
-                        <h5>Troika</h5>
-                        <p class="margin5">+98298989899</p>
-                        <p class="margin5">hhh@gmail.com</p>
-                    </div>
-                </li>
-                <li class="collection-item row" onclick="app.messageLink();">
-                    <div class="col s3 padding0">
-                        <img src="img/profile_pic_03.png" class=" responsive-img couponImg">
-                    </div>
-                    <div class="col s9">
-                        <h5>Troika</h5>
-                        <p class="margin5">+98298989899</p>
-                        <p class="margin5">hhh@gmail.com</p>
-                    </div>
-                </li>
+            <ul class="collection" id="chatList">
 
             </ul>
         </div>
